--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,7 +5,7 @@
   "customizations": {
     "codespaces": {
       "repositories": {
-        "Zahlen-Group/ei": {
+        "anthms/codespace-prebuild": {
           "permissions": "read-all"
         }
       }
