--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,18 +7,7 @@
       "repositories": {
         "anthms/debug-runner": {
           "permissions": {
-            "actions": "read",
-            "checks": "read",
-            "contents": "read",
-            "deployments": "read",
-            "discussions": "read",
-            "issues": "read",
-            "packages": "read",
-            "pages": "read",
-            "pull_requests": "read",
-            "repository_projects": "read",
-            "statuses": "read",
-            "workflows": "read"
+            "contents": "read"
           }
         }
       }
