--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,6 +7,7 @@
       "repositories": {
         "anthms/debug-runner": {
           "permissions": {
+            "actions": "read",
             "contents": "read"
           }
         }
