--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,12 +7,11 @@
       "repositories": {
         "anthms/debug-runner": {
           "permissions": {
-            "actions": "read",
             "contents": "read"
           }
         }
       }
     }
   },
-  "onCreateCommand": ".devcontainer/script.sh"
+  "onCreateCommand": "bash .devcontainer/script.sh"
 }
